--- a/Artzy/WindowsFormsApp1/frmCadastro.resx
+++ b/Artzy/WindowsFormsApp1/frmCadastro.resx
@@ -185,6 +185,85 @@
         AABJRU5ErkJggg==
 </value>
   </data>
+  <data name="pictureBox5.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAHAAAABwCAYAAADG4PRLAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
+        DgAACw4BQL7hQQAAERxJREFUeF7tnQeUnUUVxxEpKlFQOlIVFKkJBom00IJ0ElpARFGEEMoJRQ5NCBCQ
+        iNKilBwIgSBtCQnJ1iSbDakgroIGBQmwAY4GCYIQagLB3w0X9u3s/d6b+b55ZXff/5z/ebvvzb135k75
+        pn8rVVFFWTFjxoxeU6dO7d3U1HQkn8OmTJkyAo6aNm3aGD7/wOddfH8HnzcR5gr+Ph0e1tDQ0Ifv1lQ1
+        VRQbw4cPX5kM2BLnn8DnbTj/z/z9Bvw4I9+ErfAWeFxtbe3X1WQVWTFr1qwNqUXH4thxcAm0MiA6KRyL
+        sHsPn4dTWDbU6FThgwkTJqyN807CkYL3oenkEvJdWENmHizNtUazilx8/PHHn8NJ/XHSdVAcZjmyEvgy
+        vLa+vn57jXoV0kzhlCnwI3VSV+DS5ubmu2kpdtFk9CxIjZMmCUc86jimq3E56ZjW0tKyrSat+0MSK2k2
+        nNFlSU2U1mMcn+tpMrsf6ACsRQJ/RULfy018N+NSeq3na5K7D3joDyDzpANgJbrbkbQ+0S2a1Zqams/T
+        XP6ORC13E9ndSbqlNg5raGhYXd3RtSAlUEqilbiIfBcbz+Cs8VCmzy7juyH0EI/i+wHEoT//y/BkPz4H
+        8d0p/P1L/r5BZPj8J1wKLd1RiJ2Hu9xkAA4cSMQXWgnKQjJAOgsz4UXwMLgRPdqV1WwwZHpOdBDXw9F9
+        JX/PgcugaT8DX6APsJ2arWzgjDOJ8AdOArJQOj2T4Ilz584tei+vsbFxczLzKNLRiM2YmbkEvceqmcqD
+        zqZcC6M870jsS/Ds6dOnl21ymaZvS1qT04jPS278UlKmBk9X9ZUDmodViJgMEaxIh/JJaoEs91TMw5+m
+        VtJ3NHw6J56pWVFDDal51JQxVkRDiI7nSNiRqrYiIc9MaQaJ73w3/il4haotH3RK7DojciF8k4w7a/Lk
+        yV9StRWPsWPHfoF4S4vzak460vBcVVkeEIHLnQiFcmpdXd03VF2XA838NtTIh500hVDmUs9QdaWF1BqM
+        f2hEyodLSfgpDPRXU3VdFqNHj16V9AyDqdYu8cM7+HJvVVcaYHAPjL/jRsaHRLiNTk8/VdVtQGGWPTYv
+        WmkuROTewC9bqKrigmZjY4yl6lYT0XmzZ8/+qqrqdpAhj6TRSrsH57e2tq6qqoqDUaNGrY6hZsewL28n
+        49dQVd0W8lggE+uM9Bck/rlP1RQHGLjQMuzB26THqmq6PaSgNjc332b4oRCXIVuc2RpKVT8MpHlQ39KT
+        Mi8XpD1NJi4mE+NOGepMy+OOIR/W9NTME0hNhA8afslLZMZH9Ru1TyaoTWNJJBIzJQGqosdCnon44Y+W
+        j5KIv2U+eZCqyAbpWaHsrVwDHmyrr6/fTFX0eNCCbYxP/u34qBBfitIrpTTcZChPJKVt2aRJk3ZQ8ZJD
+        dgHIUId49yEuu/K5Ox2KHYjbRhokNWSCHV07o3eX0Ml2kSMOQX0I7Jyn4unQ0tLybRS97SrOx8xGAyDP
+        CZnOwu65sAlKKU9cwyMzl8EX4HhalpN9WwnStElTU9O96MjddCy6bl6wYIF3RhL+4hx5H76K3a+peDhQ
+        8ICjMC9JaIOKFhXY2grKSaPQZsnifOI9lE+zhlJA1uX35xyZXD4uNV6D54V0BsnEoIE+NfdCFQ8Dkd4O
+        BSFbAN+QGqviRYE2hXLQJfr2e9L7OvwNDt5Uza0A391phXd4lQYvCPRtTfiQU1Xv19XVhc9eIXiroygv
+        ce5FKhodJHo9bFwFS7H9fjG8RGadZHsFf/tM2L8V8kykWQxdxQlbACYz1qckvmYoMomDn54zZ86XVTwq
+        eFYdiI1nXZvFJmmSrv+p7vdJJJ47aZQLgqZU1hNDNn09HzQuJAOlU2ApMkliB6toNEhvkpIq8Ui7ZBWD
+        Ift7+mvUvUD4Exz5vKRCHa6ihYHAP1wFebhAHs4qGg0UivsNW5XMoAyUHQjI/MnRkUgysE5F84Pa931L
+        QRJx9FEqGgUyeCWyQb3fCmFQBgqQkfP6lq5OxM9vMezZQEWTgfOuthRYROkrMefsRBf2M2+QKhODM1BX
+        85939CQSfw9VURtS+gkYojDdGCUB6JSxnWmrCzA4AwX4cIShyySFe7yK2aAr3McSTKBMC22lopmBrv4k
+        JsswQTocctbhDjo/F/MoGIy+AfQO9yHhx/D3BVq72zR8bKbNwC2Q9dqeQvyX5B2ukFjvbjOMNuuCs9dG
+        XyrHkihZBL2VMdtePpO/EoYMPgAZ6STF3DqfKgMFyD7m6Eok8R6oYp2BM+Q8gCnoEqdHWzlGV5qFT6lx
+        k2FvVRMMMnIn5B9RfVmZOgPJlLMNfSYJe72KdQQdCDmp4ztxvXzmzJmbqGgmtLS0bIu+0FO7H5GQoTIg
+        VjWpIeNNCu556Mx6piN1BkoLJC2JodPiIyrWEfwgE8SWgMW5KpYZ6KpxdBfiO2TegSoeDTjwCNHt2Aph
+        6gwUIO917oK0y072zisU/PgjN3ASSewIFcsE9HwHfSEl/20iv4eKRwfOGYyNtDUxawbe6OhLpDzvVawd
+        OHOUFdgiYY9RsUzAYd5jTiF2z1LRooE4XWDZ9mCmDCRtcu2KpdfiEBVrB1/6Psw/mDhx4uYqlhoy/Yau
+        /zi6E4ljG1W0qNCJ5umufQ9mykDsbmDoNIkvLlOxdvCD7y0SbXR4Ms99oqevozeRlM5ltbW10cachVBf
+        X78LdkMn0TNloHYivZ7BZOD9KtYOfvDqCSJcqyKZgC7vWRd6aXerWMmAXdmiYcYngZkyUIAO362b81Xk
+        E8hanhEoib9XsUygVs0ydJuk41La0zuAgrqPFZc8jJGBPqv/wv+pyCcgsrLMbwXsRBx/pYplAnq8thUQ
+        t2d9ZlhiQ2xiO2SmJnMG4pPhhl6THQ7E0kR5LyERdpiKpQYP7LUs3RZJ1GgVKzmwLzM9ZrwMxsjAkw29
+        Jilc7cfRyJQBViCLhD1exVJDth9YuhNYtgsBcGjINsAYGSiTCZbuTqSj1T6FiKDc2WkGdClhVSw10CE3
+        J5n6XVLSoi4Yh4DCKhcamPEymDkDSat3RWIwv7uKheU8iTpAxVIDHQMt3QncV8VKDmzv78QlH2N0YuRq
+        MEt3J3aYjeGLQW6APDxIxVIDHSH29lexkqOlpWVfIz5JzJyB2EuXgVKrrEAWqebJ61GeCGkqCBt9x5sv
+        xLYVpwSWtAmFu6nYihqxm/NjIjHyExVLjbq6Otn1beo3eImKlRxi24lLPmbOwJBHC4+9Piq24hkoqwJm
+        QIPnqFhqNDQ0fMXQm8RxKlZyUFjrjfgkMUYNPMXQa5Kw7cOIiRMnhozLrlaxTEDXf13dFonognLc4qQD
+        +ZBzkTE6Md5b7olfR5/wpdfZNTIwysAa5/hOpS2X7fUqVjKITSMu+RijCb3P0GtxsYq0gy//5QQyieOj
+        LOugR27XNW24pNDco2IlA3bnuvEowMwZSDrlfVCW7g7Ed60q0g6+9D239mKMuUnsfdfQnUjZ8qiiRQdx
+        29WKQwFmysCQ5SRYo2LtINKjjYAW5Z6zrVUsNVIs6E6RxVYVLxo0Xn9x7XswUwZSQOUcvaW3E3GFuaA7
+        xA2YRNrqKFsK0RXSTZem9GwVLRpI268t2x7MlIGBQ4ifqVg7+KG3GzAPL1exTKB3uQWlKeTgv+zcPkHF
+        owPdUojLsqkJP/i2gDKR3VfF2oGCNfjRd2t754doSqBrrKO7EOU5cZiKRwPpP42SnfroNjUo06IzOl5w
+        dSZwceKwigT4LulL1z7KPTA8c+StnKGlfglxHSGnmVRNamC/V1NTkywbZdrYS3yOUJXBoPDI+QhTr0vC
+        Jm9pIUDI6aDOW9tSgsRfY+gvSBLTClO/jwG7/ZD36rp7MPUdAdReuTDW0tmJxHm4inUGtep7llAC7S3e
+        KSBv7URflnPw+KB5b5/hjZ6MPQjGOhOxgjj2mbwnh/IAeXnhiKnXZd6NzTQn61Aive5eIdwHOCPzcOJT
+        4IC90JvptBBxkqkvmb+8BH3HwP3I2AFQVhWkxzuF74r2qh3sB+9WQE7eQGPqc4n+lws+Ngjo3alAYZQN
+        Tp8CnefAcl5qkJXLqATehZrwch7F+0AtfEBFk0EJ9V6dh6/NmzfviyqaGfouo6D7aSqQr1DjD9EkJYKm
+        UPYF/d2RzUsqzKEqnoynnnpqNQJ73xFDhv9URaMBnd5jogql9GjvxOH7uLvYybgd+f5m0hj0DnxknvV+
+        xiIQMhvxoopFgxQiIpyqZ1oEyrgz9AhcLuXmJ3lX8GzStCjn+yCS4b9Q9xQGgeV65ZA3kJ2oojEhN1ac
+        CWMegw7l65T6Q6V3SzzK+d7fxcE3YSHkfTaANn9RTU3NmioaFdIpwIbvLEVMPkqN+ewUMv/LVGOmwX5a
+        NjY2Hq3R8AeRP9RSlocjVTQ65Npi0U8t8H42Z+Ar8OdqugN4fp3lhC06yYcxaj4cKHjSVZiHH4Z0odMA
+        B25Igu7CVtAltJ58Gf2XwrwXrFKISnkR0WOkN/0N9tOnTz/OUJpIjM2DRb/ofNasWevi6GE4czZ2swzM
+        3yO+jegZ6nvzriy8Er4UveQneDStrWbTQVeJvS9kE2I06u1N+SCzEnQytpEMUKe2wnydL5mpkTtZRhLP
+        48m8VDdtyHgVe/LavWI9EydQeeK8uZREymlVy0gSl1E79lPxkoNmfBUe+nJRa1/ivieO3h1uT0avy89R
+        73XDhrwZ23tXgQdfh1dJxVEzcUAk5ZXdlsEkLsRpHa4u7q6YPHnypqRXVnFC77pxOQE/F6cPIdUZA0Hj
+        MSJTtFt8KxG6ECA3LnlPjxFeBvY30mJtq2qKB4z82I1AIVILG+UFwqqix4Dn6/qkXw7wyIyWzOJMJbNw
+        xzRpyW7g9yH8X5r3BX4KebZg1PsutRzW9KSaWNEgM2T5Qx60VkYlkoxviLGXtIoIoBmQ5aaQedIVJBOn
+        el0ZXEVxId1nMuN6K5MKkcz/W8nb/io6Q8dAIUevcrmQTCz5YZUqHMg0D5kRtKKcS2pjlG2BVWQANWk9
+        mPoOamT/SkEo26vqsoJB/Dqkoy/j5D1JS+rtjWWFTlulnk4i4R8xxrz0oYce8noDWCVAtyZeSyuSuy1C
+        5kVnlGRQHhtEXIYXWW+Dl/OJp4tzVG3FgbFwLwrcSfBNJ+6fkUx9jUK9s4p0Hcir50jAAjdBocQB8q6+
+        U9va2op+lMwXuqB8PhmX7z2Cn5E0yDsFU23yLSt4FmxGAlJ3bHKJExbhsJt4Rm6j6ksO4iHbKH4LZZXe
+        jKdFeSx0uMelK0EndWuthKWkHD+TrefD0F3056RMNmDrfCi7EbKsMGS+zaNskOEBNcj7lTIhpHC0wdvR
+        L1vnN5U5WjUbDJlop6n7puhC5xg+pYmM8pJJdBX9fu+iA+cMxDGp90J6Uqb1noAP4rRr4BnYHMznwbKw
+        zN8D5G/4Q/6WbYojCSu3QcyHRXsjKE1/1+vIWJBmD8d5387bTdjcrSYpdOrtVDLS92L1Lktq+MJSXtBe
+        Uuj2A3kfe/BqRlcgBXSi9MQ1ud0XlFLZuh/1gGWZ2cqw4QeavJ4BaVZ50B9CqZWtgJZTKp7SXEoaeM5X
+        zKRDWUBvUY52z4BlOXsQSImjnDY6qLqa4oBB9Le0mx/yFu2SkHjJcOgWWoyuuepQSsj+GRwlL94YBzPP
+        r6YlcXiVz7F0TAZV8iR7RYNmamU6CPJei0ull6c1oZOzI3ExNmTn3UgpQPJySI1GFbEgNYFOQ28cfBKZ
+        KdN1D0K5L8Z7txxh5YyEzHXei47hPINP5rNfQ0PDV9RMFeUANaaXLDCTITvW1dXJlZFyC3x/msBd5Tv5
+        jTDRLmWoooqMWGml/wPmYI9R0NL4SAAAAABJRU5ErkJggg==
+</value>
+  </data>
   <data name="pictureBox4.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAHAAAABwCAYAAADG4PRLAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
