--- a/Artzy/WindowsFormsApp1/frmCadastro.resx
+++ b/Artzy/WindowsFormsApp1/frmCadastro.resx
@@ -323,6 +323,65 @@
         0cPvNfy+L5bFSq9hxIj/A0i9u+LIfKXjAAAAAElFTkSuQmCC
 </value>
   </data>
+  <data name="pictureBox6.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAHAAAABwCAYAAADG4PRLAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
+        DAAACwwBP0AiyAAADG5JREFUeF7tnQuMHVUZxyu+QKkCKlReQqmogPWVGEKpiVgVohZKfaCtQSlqtPhA
+        UCgaqhIaS+i2LLvd3d5te+9uH7jaUDaQCoLbWA2YJlWhoS1CLULdItCnlD6g9feRb5vZb8+9M/feuXPP
+        zp1/8s/t4zvnfN//m3PmzMyZMyOGOxYuXDhy0aJFF8Ffwm7YB/8J/wv3w73YbFu8ePEG2AeX82838zse
+        Hq3VZEgSPT09byIp00jAn0iGJOcQv4cr4LOUfYC6JkudWn2GWgGhRyP6Qrg7kIS4uItktnZ3d79bm8sQ
+        FxB2VGdnZ76KnlYO99HWfNo6Q5vPUCmam5vfjKByvnrOiFxzSpsk8irxQd3JUA4YysYg4oMucZMkPtzP
+        0H2yupUhChBOZpXPBoWsJ0ng5nw+/zF1L0MpcMR/HdGSONeVy90kcbK6mcEFjvTpCLXPCFcuX4Lr4AoO
+        BpmxFvi9m99H9P9cZaJyD+fFL6m7GYJAnC/CSpInF+qr6B1TcrncqYcPH36dVunEkiVLTsV+GlxN2YOm
+        rkikrU9odRkETFjkrsgrLrFK8EXK3NbV1fVWraZskMST4Rz4H0f9pbiLg2WsVtPYIAmjEORJI1BRYn8I
+        zkHAk7SKqiF1kcTF1B95BMCHDcuWLXunVtGY6OnpeT1CyL1Jp0gOPsk5qGbDF758gTbKmf12a9HGBAJM
+        NYKU4sP0lDO1aM1AEs+grQ2m7aIsFAoTtGhjgcnE2xDgGStIET6EsMdp0ZqDXn4CbT5mfCjGjRKLFm0c
+        kJAbHGK4uJaj/B1aLDHQ5umcF59y+DOE2E3TYo0Bzn3HEviLVghLhNmaxLBZDO3t7e/Fjx3WLwf7Z86c
+        eZQWSz9IzI0OEYbQh4tm/Ih6nr5Si6QfDJ9rHQJYrlDzugNf/mh8c3E1vfANWiS9IHkfJtiwe50H8/n8
+        WVqk7mDEuFB8Mj5a7ue8ebYWSS8IdJ4JfAgRbLmaewP8usf6aclBd52apxcEusYGbsm57+Nq7g3wS+7V
+        Ov0N8CE1Tyeam5vl2u9lE/QgysxTzb2C3DXCv63WX8MDTU1Nx2iR9IHkfNIR9CDS+3Jq7h0YIpe4fA5S
+        Lj3UPH1gAvN9V9BBkuSJau4dOLi+5/I5SJ/9rxoEeLsN2JKZ3EfU3Dvg3wXWXwdnqHn6QA9scwQc5Mtt
+        bW0nqrl3wH959BX2VH+emqcPBJc3wVq+0NraeqyaeweGx5HweYffR8gwm1fz9IEAV9iADbf29fV5ezdD
+        lt/TC8OeF3pzByl2EHzYLK6/o6PjLWruHeQSgRhKLjKmhy5R8/SB4NtdQQe4c/78+ceruXdYunTp8eKj
+        8XkQSWCzmqcPBHiHDdjwVQQYrebeIZfLfcDh8yBykP5CzdMHgpvpCjpIH2+jDYCDa7LLZ8Or1Tx9QICJ
+        joAH0ecbwhFOAXIAensdWzW6urpOdAVt2Kfm3gHfQp9j9vb2ejsJiwUEGbaQ6RAX86eouTegZ50nvhlf
+        B5ERZpOapxcEKQtonQIMEBvvhlESKO/gO/0dIH7PUfP0gvOILJ51ChBgf9g7DkmitbVVbqFtMz4OIbPU
+        8VokvSCBxxFsvw3ekqP5Ri1Sd+DLr10+GvYTW2PseoEgnQ4BLHfIm0RapG7Qa7/QTRWI6VdaJP3gSJXl
+        669aERxcrUXqAllQTGL+7PDLcg923t6AqAkI+F6HEEOI3a1aJHHQfpP1pwjT+wSiGBYsWHC2QwgXZbel
+        a7RYYqDNnwV8KEoOsO0SixZrLCDAnVaQYmTY/WFSM1Pa+7ltvwRv0WKNB52R/tsIUpTYt9Ry9bO+MRV6
+        uyzAx31+AJ0IGIImIEQ5u1L8LR/zlh/Ss6n3Ig6Qf5i2SlF2rci2HhGQxOscApWiJPyOzs7OMVpFxZBF
+        VCROel25Gywkfl72Fgh4NILcZQSKwv/BbnrCpHKe5MtDY8pdKmVhJXvStGtVGQbAMHYUwjxghCqH8h7f
+        Sg6GW+FV8GISO45eOo5edgl/nk5Pv51/v5ffkguTQlhoqHcBy4EuWbjPCOYTF9HT36juZnBB30GIfHmR
+        FOm1sp/MSHUzQxgQ7VpYyfkpbu4jcd9StzKEQVZmI9o34caAiPXmepI4hfNnYjtlDDvocotZMOrWI/Wg
+        PDK6wefl/4lDtqtCmOsRZpcRy2fKZuk/8nkNayJAhCsQI/I+aR7yCYbWSRpO40DuoMBVDkGGI2WXxbt8
+        XIhVE3BB/VUCfiEgQFx8hh7dy+98OIuecROcTnvf5e8z+PNt/LZjcz+/W2DcM9wt1H25hpk+0ONk/zER
+        Nw7hniYhv+F3Khf/oyt5L112oye5ZyH6N+DvqCuWgwq/5vi0ICsWENi7EKmcO/2W8s7EZg6C2fz5NK02
+        djATPo925CXUai9h1uDre7Ta4Q0SN56AZMhyBVqSiHkQdkodMLEVX3Kvk3blMVe3+GD9ikLKbcbn87XK
+        4QmCmEQwZe+DTbl9BN/GJcb7taq6IZfLjcUX2Ty9kv28+4nlM1rV8IImT9azuAIrSsqtKhQKp2s13gC/
+        PoR/lTwt2cO5dnglkWCn4fheE0gYZWnF57UKb4GPsmNT2IY/lns5J35Kq/AbOCtbcZTcjSlIkn2QIWq5
+        z+/GW8iMGr/L2etb1vPsleFYq/ATOHoOgUVepAR3yYPW4Trtxv8ZsJyR5umOjg4/P29HIk7BwcibhZPo
+        LT5v6hMVxPJRWM4se31LS0viW0iHgiEidB+xAZK8DW1tban5Ph+xf5C4Ih+88E4t6gdw6KfGwaIkeetS
+        c5EbAOe3M4nvcRtvCfqxqo1kjMEZWR3mctLysaamphO0aOpAfKfBqMPpVk4752rR+kDXrzxqHCvGf6Wx
+        51kwnMqbV3tM7E5i+3stVh+QkEhDJ8OmvABS36MtQZCY84k76s3x72ixZCHTYRIT6atfBNRwi4KIO+q8
+        YCv6JL/WhuRFectW9k1p0iINB+IP253xNaLlTC2SDOSxCw2HrmHhyNq0cuXKhl1LKdfGJGeTSxvDV9Bq
+        lBarPWhM7s67HAnyEFPr4f04JQag1WUObYYQuxYtUlvQ++R6J8qjlYVapOFBcmSph0ujI6Sn7pw9e3bt
+        Rysai/Le+PNputNSLfQiP3SnC3izFqkN5s6dK2/URlm/eb0WyaCgF0aZ9D2FXe1WHtCAvFPnajjIXTiR
+        9T4DXcAceseKWfvFWiR+RBnL4Sw1z2CANlEmf7X5Lq/0Kk60JScv/P/BQiN8watC0Lvk8sup3QDR8KWa
+        bJzANY2scXE2OkAaX6XmGRyQB9doFPrEApspWiQ+UPEy25AlDWfv0YWAGamsFHfqF2C87+Dr++thN2d3
+        MESk9lFRXNCVCweMdoPI6erRWN/Dp0L5GLCzsQD/oOYZSkA6A3r+1aFfkAewiW9NLEfNFEcjg4hN4245
+        VSbQ6xarnyWnoy+refXgaAj7aJXwAjXPEAIO9tDd+2F8X0GjsnWmcsvnUv3lypih26m4dDxCOk2PmlcP
+        KgybwKxV0wwRQYLCtp1+Qk2rg1y7UFnY7rr3qXmGiCCB8qKpS8sB7otlwTMNySIdVwNHyAk3/dvtxwx0
+        Dd1Ivbu7u/pV3FzbjXNVblifhTnDGCTwxw4dB5HJzjg1rxxdXV2fdVVu+BU1zxARjFrTHToOIkn+tJpX
+        DioK/QA+zlyi5hkiAt2utjpaMvp9Ts0rBxVdaSu2jKWrNxgKhcLXXFoGSQIvU/PKQe+SlzWdDQwQmwvV
+        PENEoNtUq6ODl6p55aCS0CEUTlXzDBHBQR86ieEcWP3TeYbHc12VB0lDy9U8Q0Sg2z1WR8tcLlf9puqy
+        IQ6VhT2J3549iY8O/ehJ2M2R3fLZcy1SHajs76ZyF3vlbSUtkqEI0OgYDvi/OPSz7NUi1YPKfmAqL8Zc
+        w2/BWAKiDckLXdkg5LQU3+oGeROJSks+RQ7wEZycKEOvFm94yNN1LgmuICnrHXq5KAuj491UlkrnmUbC
+        uI1EPsjvCvjbRiQJE8q2mjuhSyMnKXOTyh4fmBGdROWhX97MWDW3cJ58u8oeL2RodDSYMT7uR+MJKndt
+        QCOyuY2r8YxVkuT9RGWuLWhM9u10OpGxMpK8ZD/6TINyK6iSLRgzBoiO2/m9VmVNFvqwd23QoYxl8eH2
+        9vZzVM76QK73mPZejjNZIqNRdgBeQ8/z63MFsgCnUCiMzefz3yahd+PkRpyU6x8fvn9ULx5CA3kzV74v
+        0cPvNfy+L5bFSq9hxIj/A0i9u+LIfKXjAAAAAElFTkSuQmCC
+</value>
+  </data>
   <data name="pictureBox2.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAHAAAABwCAYAAADG4PRLAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
